# NetTrafficARVisualizer

./: .gitignore  .gitmodules  LICENSE  README.md  UpgradeLog.htm
Assets/: CallNativeLibrary.cs  Capture.cs  network.cs  packages.config
Assets/MainAR/: MainAR.unity
Assets/MainAR/Prefabs/: Cube.prefab  CubeMaterial.mat
Assets/MainAR/Prefabs/DecoratePacket/Normal/: NormalPacket.prefab  NormalPacketMaterial.mat  packet-normal.prefab
Assets/MainAR/Prefabs/DecoratePacket/Normal/packet-normal.Materials/: マテリアル.002.asset  マテリアル.003.asset  マテリアル.asset
Assets/MainAR/Prefabs/DecoratePacket/Normal/packet-normal.Meshes/: 立方体.001.asset  立方体.asset
Assets/MainAR/Prefabs/DecoratePacket/Spamhaus/: packet-spamhaus.prefab
Assets/MainAR/Prefabs/DecoratePacket/Spamhaus/packet-spamhaus.Materials/: マテリアル.001.asset  マテリアル.003.asset  マテリアル.004.asset  マテリアル.005.asset  マテリアル.006.asset
Assets/MainAR/Prefabs/DecoratePacket/Spamhaus/packet-spamhaus.Meshes/: NURBSカーブ.asset  円柱.001.asset  円柱.asset  立方体.002.asset  立方体.003.asset  立方体.asset
Assets/MainAR/Prefabs/InboundPacket/: InboundPacket.cs  InboundPacket.prefab  InboundPacketBase.prefab  InboundPacketMaterial.mat  InboundPacketTrail.mat
Assets/MainAR/Prefabs/OutboundPacket/: OutboundPacket.cs  OutboundPacket.prefab  OutboundPacketBase.prefab  OutboundPacketMaterial.mat  OutboundPacketTrail.mat
Assets/MainAR/Prefabs/Packet/: Packet.cs  Packet.prefab  PacketMaterial.mat  PacketTrail.mat
Assets/MainAR/ScriptableObject/: PacketPrefabData.asset
Assets/MainAR/Scripts/: ARController.cs  AxesGizmo.cs  NativeCodeCommander.cs  NativeCodeExecutor.cs  NativeCodeInterface.cs  PermissionManager.cs  RootInitializer.cs  RootLifetimeScope.cs  UIManager.cs
Assets/MainAR/Scripts/AR/: ARController.cs
Assets/MainAR/Scripts/Compass/: CompassState.cs
Assets/MainAR/Scripts/Geo/: GeoUitl.cs
Assets/MainAR/Scripts/NativeCodeInterface/: NativeCodeCommander.cs  NativeCodeExecutor.cs
Assets/MainAR/Scripts/Packet/: InboundPacket.cs  OutboundPacket.cs  PacketFactory.cs  PacketModel.cs  PacketPrefabData.cs
Assets/MainAR/Scripts/View/: ButtonManager.cs  DebugTextModel.cs  UIController.cs  UIManager.cs
Assets/Plugins/Android/: AndroidManifest.xml  capture-debug.aar  mainTemplate.gradle  mylibrary-debug.aar
Assets/Plugins/Android/armeabi-v7a/: libpcap.so.3
Assets/Scenes/: MainAR.unity
Assets/XR/: XRGeneralSettings.asset
Demonstration/: app.py
NativePlugin/Android/: settings.gradle
NativePlugin/Android/capture/: build.gradle
NativePlugin/Android/capture/src/androidTest/java/com/fum1h1to/NetTrafficARVisualizer/capture/: ExampleInstrumentedTest.java
NativePlugin/Android/capture/src/main/: AndroidManifest.xml
NativePlugin/Android/capture/src/main/java/com/fum1h1to/NetTrafficARVisualizer/capture/: CaptureActivity.java  CaptureThread.java  GeoipSettings.java  Geolocation.java  MyBroadcastReceiver.java  PacketCreater.java  UnityPlayerActivity.java  Utils.java
NativePlugin/Android/capture/src/main/java/com/fum1h1to/NetTrafficARVisualizer/capture/Geoip/: Coordinate.java  GeoipSettings.java  Geolocation.java  Geomodel.java
NativePlugin/Android/capture/src/main/java/com/fum1h1to/NetTrafficARVisualizer/capture/Manager/: LocalLocationManager.java  LocalSensorManager.java
NativePlugin/Android/capture/src/main/java/com/fum1h1to/NetTrafficARVisualizer/capture/Packet/: PacketConverter.java  PacketModel.java  PacketReceiver.java  PacketSender.java  PacketService.java
NativePlugin/Android/capture/src/main/java/com/fum1h1to/NetTrafficARVisualizer/capture/Permission/: PermissionManager.java
NativePlugin/Android/capture/src/main/java/com/fum1h1to/NetTrafficARVisualizer/capture/config/: Config.java
NativePlugin/Android/capture/src/main/java/com/fum1h1to/NetTrafficARVisualizer/capture/core/: CaptureQueue.java  LocalVPNService.java  PacketRawDataQueue.java
NativePlugin/Android/capture/src/main/java/com/fum1h1to/NetTrafficARVisualizer/capture/threat/: IThreatDatabase.java  (+3 more)
NativePlugin/Android/capture/src/test/java/com/fum1h1to/NetTrafficARVisualizer/capture/: ExampleUnitTest.java
NativePlugin/Android/gradle/wrapper/: gradle-wrapper.properties
NativePlugin/Android/mylibrary/: build.gradle
NativePlugin/Android/mylibrary/src/main/java/com/example/mylibrary/: CaptureActivity.java  CaptureThread.java  MyBroadcastReceiver.java  UnityPlayerActivity.java
NativePlugin/Android/nativelib/: .gitignore  build.gradle
NativePlugin/Android/nativelib/src/main/cpp/: CMakeLists.txt  nativelib.cpp
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
(+13 files in other folders)
